Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Dec-2011 Christophe Demko
 - [#26581] Link to users profiles on latest user and whos online (Denise McLaurin)

13-Dec-2011 Mark Dexter
 # [#27295] Start fading out the use of deprecated platform APIs

12-Dec-2011 Christophe Demko
 # [#25997] Fix missing article itemid in com_contact

11-Dec-2011 Jean-Marie Simonet
 # [#27376] Fix: Debug plugin reloaded. Thanks Nikolai
 $ [#27308] Backend or back-end (Jennifer Marriott)

10-Dec-2011 Christophe Demko
 # [#26589] unexpected behaviour in RSS with feed email (Brian Teeman)
 $ [#27367] Capitalise quick icon (Brian Teeman)
 $ [#27310] sef or SEF  (Brian Teeman)
 # [#27324] Joomla! Administration Login box has very SMALL margin at the bottom. (Alex B.)
 + [#24684] Patch to enable change of newsfeed display direction (Mathieu Cattin)
 + [#27263] *Option to set Joomla to Site Offline (YES) during installation (Jean-Marie Simonet)
 + [#26734] Debug Plugin Reloaded (Nikolai Plath)
 # [#26442] In banners module, open link in popup window does not work. (Mathieu Cattin)
 # [#26597] Fix JavaScript that relies on MooTools 1.2 ** (Rouven Weßling)
 # [#27124] Plug-Ins Manager missing string on no results (Nikolai Plath)

09-Dec-2011 Mark Dexter
 - Remove some files missed in reverting [#27282]
 # [#27291] Update database connection field
 + [#27205] Add a true autoloader to the CMS

09-Dec-2011 Jean-Marie Simonet
 # [#27325] Wrong module language file names in mod_articles_popular.xml. Thanks Alex.
 $ [#27289] bad english in en-GB.mod_syndicate.ini. Thanks Brian
 $ [#27313] template component language. Thanks Brian
 $ [#27314] Login component language. Thanks Brian
 $ [#27315] utilize not en-GB. Thanks Brian
 $ [#27311] normally not normaly - spelling. Thanks Brian
