@@ -120,6 +120,8 @@ COM_CONFIG_FIELD_METAKEYS_DESC="Enter the keywords and phrases that best describ
 COM_CONFIG_FIELD_METAKEYS_LABEL="Site Meta Keywords"
 COM_CONFIG_FIELD_METALANGUAGE_DESC="Places the selected language in the metadata for the site."
 COM_CONFIG_FIELD_METALANGUAGE_LABEL="Site Meta Language"
+COM_CONFIG_FIELD_OFFLINE_IMAGE_DESC="An optional image to be displayed on the default offline page"
+COM_CONFIG_FIELD_OFFLINE_IMAGE_LABEL="Offline Image"
 COM_CONFIG_FIELD_OFFLINE_MESSAGE_DESC="The custom offline message will be used if the 'Offline Message' field is set to 'Use custom message'."
 COM_CONFIG_FIELD_OFFLINE_MESSAGE_LABEL="Custom Message"
 COM_CONFIG_FIELD_SECRET_DESC="This is an auto-generated, unique alphanumeric code for every Joomla! installation. It is used for security functions."
